# Agentic-SOC-Lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cases/: CASE_TEMPLATE.md
dashboards/: sentinel_kql.md  splunk_searches.md
data/scenarios/: malicious_session.json  normal_session.json
detections/: D001_tool_loop.yml  D002_retrieval_scope_violation.yml  D003_sensitive_egress.yml  D004_deny_then_exfil.yml
playbooks/: PB_TEMPLATE.md
sentinel/: README.md
sentinel/analytics-rules/: D001_tool_loop.yaml  D002_cross_tenant_retrieval.yaml  D003_sensitive_egress.yaml  D004_deny_then_exfil.yaml
sentinel/dcr/: README.md
sentinel/kql/analytics/: D001_tool_loop.kql  D002_cross_tenant_retrieval.kql  D003_sensitive_egress.kql  D004_deny_then_exfil.kql
sentinel/kql/hunting/: H001_alert_queue.kql  H002_session_timeline.kql  H003_outbound_connectors.kql  H004_boundary_violation_pivot.kql
src/agentic_soc_lab/: case_mgmt.py  detect.py  events.py  evidence_pack.py  export.py  schemas.py  sentinel_export.py  simulate.py  triage.py
tests/: conftest.py  test_detections.py  test_export.py  test_schemas.py  test_sentinel_export.py
