[project]
name = "agentic-soc-lab"
version = "0.1.0"
description = "SOC-style detections and IR playbooks for agentic AI tool abuse"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.1"]

[project.scripts]
agentic-sim = "agentic_soc_lab.simulate:main"
agentic-detect = "agentic_soc_lab.detect:main"
agentic-triage = "agentic_soc_lab.triage:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
